Wed Dec 22 11:35:07 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* configure.ac:
	* m4/ace.m4:
	* m4/compiler.m4:
	* m4/platform.m4:

	  Reverted change described in "Sun Dec 19 14:23:53 2004 ..." that
	  changed "$host" to "$target".  The latter is only used by tool
	  chains (compilers, linkers, etc) and is not needed in ACE's
	  case.  To enable cross-compilation support, users should set the
	  host platform via the "--host" configure script option, as
	  described in the "./configure --help" output.

Wed Dec 22 11:17:57 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/show_unused_macros.pl:

          This script will find macros in specified config files that
          are not referenced in other config files, but are referenced
          in the rest of the ace source files.  The macros that it shows
          are candidates for removal from ace.

Wed Dec 22 08:00:33 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/ftclientorb.mpb:
        * bin/MakeProjectCreator/config/ftserverorb.mpb:

          These both require interceptors to function properly.

        * bin/tao_other_tests.lst:

          Added !STATIC to the following:

            TAO/performance-tests/Protocols/run_test.pl
            TAO/orbsvcs/tests/Notify/Basic/run_test.pl notify.rt.conf

          Added !MINIMUM to the following:

            TAO/orbsvcs/tests/Bug_1393_Regression/run_test.pl
            TAO/orbsvcs/tests/Bug_1395_Regression/run_test.pl
            TAO/orbsvcs/tests/Bug_1436_Regression/run_test.pl
            TAO/orbsvcs/tests/Bug_1437_Regression/run_test.pl

          Added !DISABLE_INTERCEPTORS to the following:

            TAO/orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/run_test.pl
            TAO/orbsvcs/tests/FaultTolerance/IOGR/run_test.pl
            TAO/orbsvcs/tests/FaultTolerance/IOGRManipulation/run_test.pl

          Added !NO_MESSAGING to the following:
