@@ -13,13 +13,16 @@
 
 <h4>Synopsis</h4>
 
-The file explains how to build and install ACE and its Network
-Services on the various OS platforms and compilers that it has been
-ported to.  Please consult the <a href="ChangeLog">ChangeLog</a> file
-to see whether any recent changes to the release will affect your
-code.  In addition, you should check out our <a href="http://www.cs.wustl.edu/%7Eschmidt/ACE_wrappers/docs/ACE-development-process.html">development
-process</a>.  As you start working with ACE, we suggest you get copies
-of the <a href="http://www.cs.wustl.edu/%7Eschmidt/ACE/book1/">C++NPv1</a>, <a href="http://www.cs.wustl.edu/%7Eschmidt/ACE/book2/">C++NPv2</a>, and <a href="http://www.amazon.com/exec/obidos/tg/detail/-/0201699710/qid=1066059513/sr=8-1/ref=sr_8_1/103-7740325-3955843?v=glance&amp;s=books&amp;n=507846">APG</a> books
+The file explains how to build and install ACE, its Network
+Services, test suite and examples on the various OS platforms and compilers
+that it has been ported to.  Please consult the
+<a href="ChangeLog">ChangeLog</a> file to see whether any recent changes to
+the release will affect your code.  In addition, you should check out our
+<a href="http://www.cs.wustl.edu/%7Eschmidt/ACE_wrappers/docs/ACE-development-process.html">development
+process</a>.  As you start working with ACE, we suggest you get copies of the
+<a href="http://www.cs.wustl.edu/%7Eschmidt/ACE/book1/">C++NPv1</a>,
+<a href="http://www.cs.wustl.edu/%7Eschmidt/ACE/book2/">C++NPv2</a>, and
+<a href="http://www.riverace.com/acebooks/">APG</a> books
 to help guide you after you've built and installed ACE.  You should
 also consult the <a href="http://www.cs.wustl.edu/%7Eschmidt/ACE_wrappers/docs/ACE-FMM.html">ACE Frequently Made
 Mistakes page</a>.  If you encounter any problems or would like to
@@ -30,7 +33,7 @@ report process</a>.<p>
 </p><h4>Document Index</h4>
 
 <ul>
-  <li><a href="#platforms">Supported Platforms and C++ Compilers</a>
+  <li><a href="#platforms">Platforms, C++ Compilers, and Support</a>
   </li><li><a href="#installpre">Installation prerequisites</a>
   </li><li><a href="#installnotes">Installation Notes</a>
   </li><li><a href="#g++">Compiling ACE with GNU g++</a>
@@ -51,20 +54,49 @@ report process</a>.<p>
 </p><h3><a name="platforms">Platforms, C++ Compilers, and Support</a></h3>
 
 <p>ACE has been ported to a large number of platforms using many different
-compilers over the years.  The <a href="http://www.dre.vanderbilt.edu/">DOC group</a>, <a href="http://www.riverace.com/">Riverace</a>, <a href="http://www.theaceorb.com/">OCI</a>, <a href="http://www.theaceorb.nl/">Remedy IT</a>, and members of the ACE
+compilers over the years.
+The <a href="http://www.dre.vanderbilt.edu/">DOC group</a>,
+<a href="http://www.riverace.com/">Riverace</a>,
+<a href="http://www.theaceorb.com/">OCI</a>,
+<a href="http://www.theaceorb.nl/">Remedy IT</a>, and members of the ACE
 user community have all contributed ports to make ACE the successful
 and far-reaching toolkit it is today.  Any UNIX/POSIX/Windows
-variation is a potential target platform for ACE.  If you have <a href="http://www.cs.wustl.edu/%7Eschmidt/ACE_wrappers/docs/ACE-porting.html">porting questions</a> or have a problem
+variation is probably an easy target platform for ACE.  If you have
+<a href="http://www.cs.wustl.edu/%7Eschmidt/ACE_wrappers/docs/ACE-porting.html">porting questions</a> or have a problem
 compiling the ACE source distribution, please contact one of the
 commercial support companies, or send a copy of the
-PROBLEM-REPORT-FORM to either the <a href="news:comp.soft-sys.ace">ACE
+<a href="PROBLEM-REPORT-FORM">PROBLEM-REPORT-FORM</a>, located in the
+ACE_wrappers directory, to either the <a href="news:comp.soft-sys.ace">ACE
 Newsgroup</a> or the <a href="mailto:ace-users@cs.wustl.edu">ACE
 mailing list</a> and someone will try to help you fix the problems.
 
 </p><p>The responsibility for maintaining ACE across this wide range of
-platforms is divided among a few different groups: the DOC group,
-Riverace, OCI, Remedy IT, and the ACE user community itself.  The
-table below summarizes each group's role and where you can get more
+platforms is divided among a few different groups:
+<ul>
+<li>The DOC group maintains platforms used in the course of their research
+and sponsored work</li>
+<li>Companies that provide support (Riverace, OCI, and Remedy IT), maintain
+platforms they support in the course of their various service offerings</li>
+<li>The ACE user community maintains any other desired platforms.</li>
+</ul>
+The <a href="http://www.dre.vanderbilt.edu/scoreboard/" target="_blank">
+build scoreboard</a>
+records the current status of build and regression testing during
+development by all of the above groups. It is available to all users wishing
+to provide build results. Members of the ACE community that maintain ACE on
+platforms not maintained by the DOC group, Riverace, OCI, or Remedy IT are
+encouraged to provide build and regression test results for the scoreboard
+to ensure that all in-use platforms are represented.
+See the <a href="http://cvs.doc.wustl.edu/viewcvs.cgi/*checkout*/README?cvsroot=autobuild" target="_blank">autobuild README</a> for more information about
+how to set up a build; contact one of the above groups to inquire about how
+to get your build results recorded on the scoreboard.</p>
+<p>Because older
+platforms that are not maintained tend to fall into a broken state and
+clutter the ACE sources with code that is no longer used, the development
+team reserves the right to remove ACE configuration files and source code
+specific to inactive platform configurations that are not
+listed on the scoreboard.</p>
+<p>The table below summarizes each group's role and where you can get more
 detailed information.  For information on TAO's platform coverage and
 support, please also see <a href="TAO/TAO-INSTALL.html">TAO's install
 document</a>.</p><p>
@@ -73,26 +105,26 @@ document</a>.</p><p>
 <caption><b>Groups Involved in ACE Development and Support<br></b></caption>
 <thead>
   <tr valign="top">
-    <th>Group
-    </th><th>Platforms
-    </th><th>For more information
-  </th></tr>
+    <th>Group</th>
+    <th>Platforms</th>
+    <th>For more information</th>
+  </tr>
 </thead><tbody>
   <tr>
     <th>DOC Group</th>
-    <td><a href="http://www.dre.vanderbilt.edu/scoreboard/">Tested</a>
-        and used daily by the DOC group:
-        Solaris 7, 8 and 9 (many compilers excluding SunC++ 4.x)
-        Windows 2000, XP (MSVC++ 6.x, and 7.x)
+    <td>Solaris 7, 8 and 9 (many compilers excluding SunC++ 4.x);
+        Windows 2000, XP (MSVC++ 6, and 7.1);
         Linux/Intel (many compilers), Linux/IA64 (GCC).
     </td>
-    <td>DOC sites at <a href="http://www.dre.vanderbilt.edu/">ISIS, </a><a href="http://doc.ece.uci.edu/">UCI</a> and <a href="http://tao.doc.wustl.edu/">Washington University</a>
+    <td>DOC sites at <a href="http://www.dre.vanderbilt.edu/">ISIS</a>,
+        <a href="http://doc.ece.uci.edu/">UCI</a> and
+        <a href="http://tao.doc.wustl.edu/">Washington University</a>
     </td>
   </tr>
   <tr>
     <th>Riverace</th>
-    <td>Offers support services for many platforms including those
-        above, HP-UX, AIX, and Windows CE.
+    <td>Offers ACE support and consulting services for many platforms
+        including AIX, HP-UX, Linux, Solaris, and Windows (including CE).
     </td>
     <td>Riverace's <a href="http://www.riverace.com/">web site</a></td>
   </tr>
@@ -125,17 +157,20 @@ document</a>.</p><p>
         IRIX 6.x; UnixWare 7.1.0; SunOS 4.x and Solaris with SunC++ 4.x;
         Linux on PPC; OpenMVS;
         Tandem; SCO; FreeBSD; NetBSD; OpenBSD;
+        Macintosh OS X;
         Chorus; OS/9; PharLap TNT Embedded ToolSuite 9.1;
         QNX RTP and Neutrino 2.0; VxWorks; LynxOS; RTEMS; Interix 
         (Windows Services for Unix)
     </td>
   </tr><tr>
-    <th>Not supported</th>
-    <td>The following platforms have been supported in the past but are
-        not supported anymore by the DOC Group. If you want to have
-        support for these environments contact one of the commercial
-        support organisations. The platforms are: VxWorks 5.4, MSVC5,
-        Borland C++ Builder 4 and 5.
+    <th>Not maintained</th>
+    <td>The following platforms have been ported to in the past but are
+        no longer maintained and may be removed from ACE at any time.
+        If you want to have support for these environments contact one
+        of the commercial support organisations. The platforms include:
+        DG/UX, VxWorks 5.4, MSVC5, Borland C++ Builder 4 and 5.
+        For up-to-date listings on platform that are deprecated and pending
+        removal from ACE, please see the <a href="NEWS">NEWS file</a>.
     </td>
   </tr>
     <tr><td></td>
